Fix massive top/bottom margin on mobiles

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -490,3 +490,14 @@ section.body div p {
 p > .hook-arrow {
   margin-left: 1rem;
 }
+
+/* Stop there being a massive header when on mobile */
+@media (max-width: 550px) {
+  header {
+    margin-top: 2rem;
+  }
+
+  footer {
+    margin-bottom: 2rem;
+  }
+}
